# Proyecto-Integrador

app/: build.gradle.kts
app/src/androidTest/java/ups/giatta/proyecto/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ups/giatta/proyecto/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/ups/giatta/proyecto/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
